--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "network-manager-auth",
+  "compilerOptions": {
+    "esModuleInterop": true
+  },
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,11 @@
   },
   "homepage": "https://github.com/CrazyPeopleWhoCodeAfterWork/network-manager-auth#readme",
   "dependencies": {
+    "@types/express": "^4.17.20",
+    "@types/node": "^20.8.9",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
