--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "dependencies": {
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.9",
+    "@types/pg": "^8.10.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
+    "pg": "^8.11.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
