--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.9",
     "@types/pg": "^8.10.7",
+    "@types/uuid": "^9.0.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.4"
