--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20.8.9",
     "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.6",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -35,6 +36,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.4"
   }
 }
