--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.6",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/cors": "^2.8.15",
     "@types/jsonwebtoken": "^9.0.4"
   }
 }
